--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -47,10 +47,15 @@ body {
   box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.3);
 }
 
-@media screen and (max-width: 365px) {
+@media only screen and (max-width: 430px) {
   .calculator {
-    width: 90%;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     margin: 0;
+    border-radius: 0;
   }
 }
 
@@ -65,6 +70,13 @@ body {
   color: var(--white);
   font-weight: 400;
   text-align: right;
+}
+
+@media only screen and (max-width: 430px) {
+  .calculator-display {
+    height: 100%;
+    justify-content: flex-end;
+  }
 }
 
 .main-screen {
